--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
     "serve": "^14.2.4"
