--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "hono": "^4.6.16",
     "i": "^0.3.7",
     "npm": "^11.1.0",
-    "prisma": "^6.2.1"
+    "prisma": "^6.2.1",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
